antlr parser for ltl formulae added, UI improvements, several parsing bugs fixed